--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,11 +1,21 @@
 
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://i.pinimg.com/736x/b1/11/8b/b1118bc2f40cc1a7c443cc1a5b807d3b.jpg);">
+  <div class="container">
+    <h3>All lists</h3>
+   <div class="container">
+  <%= link_to "Add a new list", new_list_path, class: "btn btn-primary mt-3 mb-3"  %>
+</div>
+  </div>
+</div>
+
+
 <div class="container mt-3">
   <h3>All lists</h3>
   <div class="cards">
     <% @lists.each do |list| %>
       <%= link_to list_path(list.id) do %>
         <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
-        url(<%= list.photo.attached? ? cl_image_path(list.photo.key) : 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPQDYau3Hs4-xw1i8jVSUY4BlF4FLmg8lQqg&usqp=CAU' %>)"><%= list.name %>
+        <%= list.name %>
         </div>
       <% end %>
     <% end %>
